<resources>
    <string name="app_name">RentsyUser</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">SETTINGS</string>
    <string name="not_yet_implemented">Not yet Implemented</string>
    <string name="action_home">HOME</string>
    <string name="action_location">LOCATION</string>
    <string name="action_notification">NOTIFICATION</string>
    <string name="action_bookings">BOOKINGS</string>
    <string name="action_promotions">PROMOTIONS</string>
    <string name="action_favorite">FAVOURITES</string>
    <string name="action_cart">CART</string>
    <string name="action_pending_bookings">PENDING BOOKING</string>
    <string name="action_calender">BOOKINGS</string>

    <string name="title_activity_splace">SplaceActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login"></string>

    <!-- Strings related to login -->
    <string name="prompt_email">EMAIL ADDRESS</string>
    <string name="prompt_password">PASSWORD</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">Username or password is incorrect.</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="str_forgot_pwd">Forgot password?</string>
    <string name="login">Login</string>
    <string name="or">Or</string>
    <string name="not_account_signup">Don\'t have an account ? Sign up</string>
    <string name="signin_facebook">sign in with facebook</string>
    <string name="signup">Signup</string>
    <string name="promp_full_name">YOUR FULL NAME</string>
    <string name="promp_contact_number">CONTACT NUMBER</string>
    <string name="text_tems">By signing up you agree to our <b> Terms and Conditions </b></string>
    <string name="aleady_member">Already a member?</string>
    <string name="put_business"><![CDATA[Want to put your business on Rentsy? <b> Tap here </b>]]></string>
    <string name="forgot_password">Forgot Passowrd</string>
    <string name="recor_mail">Recover Email</string>
    <string name="businees_signup">Business Signup</string>
    <string name="promp_business_name">BUSINESS NAME</string>
    <string name="prompt_location">Location</string>
    <string name="application_recieved">APPLICATION RECEIVED</string>
    <string name="thankyou_note">Thanks for applying. One of our business development team will be in touch with you shortly.</string>
    <string name="continues">CONTINUE</string>
    <string name="INTENT_LOCATION">location</string>
    <string name="current_location">use my current location</string>
    <string name="category">Category</string>
    <string name="sub_category">Sub Category</string>
    <string name="price">Price</string>
    <string name="booking_extention_confirmed">Booking Extension Confirmed</string>
    <string name="rebook">Re-book</string>
    <string name="dummy_price">$0/hr</string>
    <string name="dummy_category">Sports + Leisure</string>
    <string name="dummy_name">Shop</string>
    <string name="dummy_amenities"> Address </string>
    <string name="description">Description</string>
    <string name="bookin_now">Add to Cart</string>
    <string name="bookin_now_confirm">Confirm Book Now</string>
    <string name="quantity">Quantity</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="lenthofbooking">Length of Booking</string>
    <string name="error_empty_value">Empty Not Allowed</string>
    <string name="apply">Apply</string>
    <string name="enter_promo_code">Enter Promo Code</string>
    <string name="dummy_data">0 x Cart item</string>
    <string name="dummy_date">00/00/0000</string>
    <string name="dummy_time">00:00pm</string>
    <string name="dummy_duration">0 Hours</string>
    <string name="subtotal">Subtotal</string>
    <string name="booking_fee">Booking Fee</string>
    <string name="discount">Discount</string>
    <string name="dash">-</string>
    <string name="total">Total</string>
    <string name="dummy_total">$0.00</string>
    <string name="dummy_discount_fee">$0.00</string>
    <string name="dummy_card_number">5722 XXXX XXXX XX52</string>
    <string name="change">Change</string>
    <string name="congratulations">Congratulations</string>
    <string name="make_booking">RESERVE ITEMS</string>
    <string name="add_more_into_cart">ADD MORE INTO CART</string>
    <string name="title_activity_settings">Settings</string>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="mycurrentlocation">My current location</string>
    <string name="search_radious">Search radious</string>
    <string name="dummy_distance">50km</string>
    <string name="city_pref">City Preference</string>
    <string name="dummy_data1">Gold Coast</string>
    <string name="privacy">privacy</string>
    <string name="push_notification">Push notification</string>
    <string name="email_alert">Email alerts</string>
    <string name="email_invoices">Email Invoices</string>
    <string name="rights_reserved">All Rights reserved. Rentsy Australia</string>
    <string name="logout">Logout</string>
    <string name="bookings">BOOKINGS</string>
    <string name="tap_view">Tap On a Day to View</string>
    <string name="open_now">Open Now</string>
    <string name="view">View</string>
    <string name="pending_booking_item">Your card will be charged once the store approves your booking. Below is the details of your booking for you to review.</string>
    <string name="promotion_text">Want  $10 off your next rental?</string>
    <string name="invite_earn">Invite a Friend both earn $10*</string>
    <string name="invite">Invite</string>
    <string name="first_booking">*when friend makes first booking</string>
    <string name="invite_friend">invite a friend</string>
    <string name="add_contact">Add Contact</string>
    <string name="earn_money">Both earn $10 when they make there first booking</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="not_available">Rentsy is not available in your city, yet</string>
    <string name="available_cities">Available Cities</string>
    <string name="faq">FAQ</string>
    <string name="action_help">HELP</string>
    <string name="booking_summary">Booking summary</string>
    <string name="company">Company</string>
    <string name="item">Item</string>
    <string name="length">Length</string>
    <string name="rental_period">REntal Period</string>
    <string name="add_another">Add Another</string>
    <string name="facebook_app_id">317117379363469</string>
    <string name="reating">RATING</string>
    <string name="title_activity_maps">Map</string>

</resources>
