<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/helvetica_neue_bold"
        android:gravity="center_horizontal"
        android:textColor="@color/text_gray"
        android:textSize="@dimen/_16sdp"
        android:padding="@dimen/_20sdp"
        android:visibility="visible"
        android:text="@string/bookin_now"
        android:textAllCaps="true" />

    <TextView
        android:id="@+id/txt_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_title"
        android:fontFamily="@font/helvetica_neue"
        android:gravity="center_horizontal"
        android:textSize="@dimen/_10sdp"
        android:padding="@dimen/_10sdp"
        android:text="@string/booking_extention_confirmed"
        android:textColor="@color/text_gray"/>

    <TextView
        android:id="@+id/txt_details_invite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_title"
        android:fontFamily="@font/helvetica_neue"
        android:gravity="center_horizontal"
        android:textSize="@dimen/_12sdp"
        android:padding="@dimen/_10sdp"
        android:text="@string/add_contact"
        android:textColor="@color/friend_invite"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:background="@color/friend_invite_bg"
        android:visibility="gone"/>


    <TextView
        android:id="@+id/txt_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/helvetica_neue"
        android:gravity="center_horizontal"
        android:textSize="@dimen/_12sdp"
        android:padding="@dimen/_10sdp"
        android:background="@color/colorblue"
        android:layout_margin="@dimen/_15sdp"
        android:textColor="@color/white"
        android:text="@string/continues"
        android:layout_below="@+id/details"/>



</LinearLayout>