<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/ll_title">

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/helvetica_fonts"
            android:gravity="center_horizontal|left"
            android:text="@string/application_recieved"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/_16sdp"
            android:paddingTop="@dimen/_15sdp"
            android:paddingBottom="@dimen/_15sdp"
            android:layout_gravity="left"/>
    </LinearLayout>



    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/trans"
        android:layout_below="@+id/ll_title"
        android:layout_marginTop="@dimen/_5sdp"/>

    <TextView
        android:id="@+id/txt_reason1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view1"
        android:fontFamily="@font/helvetica_neue"
        android:gravity="left|center"
        android:text="@string/thankyou_note"
        android:textSize="@dimen/_11sdp"
        android:padding="@dimen/_10sdp"
        />





    <LinearLayout
        android:layout_below="@+id/txt_reason1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right"
        android:layout_margin="@dimen/_10sdp">

        <TextView
            android:id="@+id/btn_done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view5"
            android:fontFamily="@font/helvetica_neue"
            android:gravity="center_horizontal"
            android:text="@string/continues"
            android:textSize="@dimen/_14sdp"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/white"
            android:background="@drawable/bg_bluebox"/>
    </LinearLayout>


</RelativeLayout>